# customized_blob_tracker

./: CMakeLists.txt  tutorial-barcode-detector.cpp  tutorial-blob-tracker-kinect.cpp  tutorial-kinect-sensor.cpp
